# ps-hack-team-1

./: .gitignore  README.md  pyproject.toml  requirements.txt
job_insights/: __init__.py  completions.py  embeddings.py  prompt_ui.py  web.py
