[tool.poetry]
name = "job_insights"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "job_insights"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pymongo = "^4.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
