[tool.poetry]
name = "job_insights"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "job_insights" }]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pymongo = "^4.6.1"
openai = "^1.6.1"
sentence-transformers = "^2.2.2"
gradio = "^4.12.0"
asyncio = "^3.4.3"
motor = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
